feat: 权限、主题基础功能

--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -9,5 +9,9 @@ spring:
   redis:
     host: localhost
 
+logging:
+  level:
+    com.jun.mqttxplatform.dao: debug
+
 biz:
   jwt-key: "(*&*(015KJ36/~.m.fsd(*^*&^kjfdDkjGFDhfd&^%^&+++r3="
