--- a/pom.xml
+++ b/pom.xml
@@ -1,23 +1,26 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
-	<modelVersion>4.0.0</modelVersion>
-	<parent>
-		<groupId>org.springframework.boot</groupId>
-		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>2.3.3.RELEASE</version>
-		<relativePath/> <!-- lookup parent from repository -->
-	</parent>
-	<groupId>com.jun</groupId>
-	<artifactId>mqttx-platform</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
-	<name>mqttx-platform</name>
-	<description>mqttx 后端管理平台</description>
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
+    <modelVersion>4.0.0</modelVersion>
+    <parent>
+        <groupId>org.springframework.boot</groupId>
+        <artifactId>spring-boot-starter-parent</artifactId>
+        <version>2.3.3.RELEASE</version>
+        <relativePath/> <!-- lookup parent from repository -->
+    </parent>
+    <groupId>com.jun</groupId>
+    <artifactId>mqttx-platform</artifactId>
+    <version>1.0.4-RELEASE</version>
+    <name>mqttx-platform</name>
+    <description>mqttx 后端管理平台</description>
 
-	<properties>
-		<java.version>1.8</java.version>
-		<maven.build.timestamp.format>yyMMddHHmmss</maven.build.timestamp.format>
-	</properties>
+    <properties>
+        <java.version>1.8</java.version>
+        <maven.build.timestamp.format>yyMMddHHmmss</maven.build.timestamp.format>
+        <pagehelper.version>5.1.8</pagehelper.version>
+        <fastjson.version>1.2.73</fastjson.version>
+        <jwt.version>3.10.3</jwt.version>
+    </properties>
 
 	<dependencies>
 		<dependency>
@@ -78,18 +81,25 @@
 			<scope>test</scope>
 		</dependency>
 
-		<dependency>
-			<groupId>com.alibaba</groupId>
-			<artifactId>fastjson</artifactId>
-			<version>1.2.73</version>
-		</dependency>
-		
-		<dependency>
-			<groupId>com.auth0</groupId>
-			<artifactId>java-jwt</artifactId>
-			<version>3.10.3</version>
-		</dependency>
-	</dependencies>
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>fastjson</artifactId>
+            <version>${fastjson.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.auth0</groupId>
+            <artifactId>java-jwt</artifactId>
+            <version>${jwt.version}</version>
+        </dependency>
+
+        <!--分页插件-->
+        <dependency>
+            <groupId>com.github.pagehelper</groupId>
+            <artifactId>pagehelper</artifactId>
+            <version>${pagehelper.version}</version>
+        </dependency>
+    </dependencies>
 
 	<profiles>
 		<profile>
@@ -120,17 +130,21 @@
 				<groupId>org.liquibase</groupId>
 				<artifactId>liquibase-maven-plugin</artifactId>
 				<version>${liquibase.version}</version>
-				<configuration>
-					<changeLogFile>${project.basedir}/src/main/resources/db/master.xml</changeLogFile>
-					<diffChangeLogFile>${project.basedir}/src/main/resources/db/changelog/${maven.build.timestamp}_changelog.xml</diffChangeLogFile>
-					<outputChangeLogFile>${project.basedir}/src/main/resources/db/changelog/${maven.build.timestamp}_changelog.xml</outputChangeLogFile>
-					<driver>com.mysql.cj.jdbc.Driver</driver>
-					<url>jdbc:mysql://localhost/mqttx_admin?allowPublicKeyRetrieval=true&amp;characterEncoding=utf8&amp;serverTimezone=Asia/Shanghai&amp;useSSL=false</url>
-					<username>root</username>
-					<password>123456</password>
-					<verbose>true</verbose>
-					<logging>debug</logging>
-				</configuration>
+                <configuration>
+                    <changeLogFile>${project.basedir}/src/main/resources/db/master.xml</changeLogFile>
+                    <diffChangeLogFile>
+                        ${project.basedir}/src/main/resources/db/changelog/${maven.build.timestamp}_changelog.xml
+                    </diffChangeLogFile>
+                    <outputChangeLogFile>
+                        ${project.basedir}/src/main/resources/db/changelog/${maven.build.timestamp}_changelog.xml
+                    </outputChangeLogFile>
+                    <driver>com.mysql.cj.jdbc.Driver</driver>
+                    <url>jdbc:mysql://localhost/mqttx?allowPublicKeyRetrieval=true&amp;characterEncoding=utf8&amp;serverTimezone=Asia/Shanghai&amp;useSSL=false</url>
+                    <username>root</username>
+                    <password>123456</password>
+                    <verbose>true</verbose>
+                    <logging>debug</logging>
+                </configuration>
 			</plugin>
 
 			<plugin>
